# code-iris

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE_CODE_CRITIQUE.md  Cargo.toml  LICENSE  OPTIMIZATIONS.md  README.md  run_phase1.sh  run_phase2.sh
.github/workflows/: ci.yml
crates/iris-cli/: Cargo.toml
crates/iris-cli/src/: main.rs
crates/iris-core/: Cargo.toml
crates/iris-core/src/: agent.rs  agent_def.rs  config.rs  context.rs  coordinator.rs  hooks.rs  instructions.rs  lib.rs  memory.rs  models.rs  permissions.rs  reporter.rs  scanner.rs  storage.rs
crates/iris-core/src/tools/: agent_tool.rs  bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lsp.rs  mcp_tool.rs  mod.rs  send_message.rs  task.rs  web_fetch.rs  web_search.rs
crates/iris-llm/: Cargo.toml
crates/iris-llm/src/: anthropic.rs  bedrock.rs  google.rs  lib.rs  mcp.rs  oauth.rs  openai.rs  retry.rs  sse.rs  types.rs
crates/iris-tui/: Cargo.toml
crates/iris-tui/src/: app.rs  buddy.rs  commands.rs  completion.rs  input.rs  main.rs  markdown.rs  statusbar.rs  welcome.rs
docs/: architecture-zh.md  architecture.md  demo-script.md  handoff-protocol-zh.md  handoff-protocol.md  show-hn-post.md
docs/blog/: 2026-04-01-multi-agent-pipeline-zh.md  2026-04-01-multi-agent-pipeline.md
