[package]
name = "iris-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure CLI for code-iris — scan, arch, deps, stats (no TUI dependency)"

[[bin]]
name = "iris"
path = "src/main.rs"

[dependencies]
# CLI
clap.workspace = true

# Async
tokio.workspace = true

# HTTP (for iris login OAuth flow)
reqwest.workspace = true

# Serialization
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Config
dotenvy.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Directories
dirs.workspace = true

# Terminal width for separator lines
crossterm.workspace = true

# Readline (arrow keys, history, backspace)
rustyline = "15"

# Internal
iris-core.workspace = true
iris-llm.workspace = true
