[package]
name = "iris-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core engine for code-iris — scanner, agent loop, tools, config"

[dependencies]
# Async
tokio.workspace = true
async-stream.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Code analysis
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true

# Environment & config
dotenvy.workspace = true
dirs.workspace = true

# Security
secrecy.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
glob.workspace = true

# HTTP (for WebFetchTool)
reqwest.workspace = true

# Internal
iris-llm.workspace = true


[dev-dependencies]
tempfile = "3"
