[package]
name = "iris-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM provider abstraction for code-iris — Anthropic, OpenAI-compat, Google"

[dependencies]
# Async
tokio.workspace = true
async-stream.workspace = true
futures.workspace = true

# HTTP (rustls — zero OpenSSL, reduced attack surface)
reqwest.workspace = true
eventsource-stream.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Security
secrecy.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# OAuth / crypto
rand.workspace = true
sha2.workspace = true
base64.workspace = true
urlencoding.workspace = true
dirs.workspace = true
